flexforms shall replace the former CODE fields
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@3627 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
+2006-08-27 Franz Holzinger <franz@fholzinger.com>
+	* Use the flexforms now. Reenter every plugin and choose the appropriate flexform texts to the former code fields.
+
 2006-08-21 Franz Holzinger <franz@fholzinger.com>
-	* plugin for triew view
+	* plugin for tree view
 	* static template for CSS styled content
 
 2006-02-13 Kasper Skårhøj <kasperYYYY@typo3.com>
