check agains spam words
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@4055 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-11 Franz Holzinger <franz@fholzinger.com>
+	* protection against spam words
+	* check of email address if it is available
+	* correct error with BACKLINK
+
 2006-09-03 Franz Holzinger <franz@fholzinger.com>
 	* Use the flexforms now. Reenter every plugin and choose the appropriate flexform texts to the former code fields.
 
