make double post check a unsigned 32 bit INTEGER
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@4144 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-25 Franz Holzinger <franz@fholzinger.com>
+	* fix 2555: unsigned 32 bit INTEGER for double post check field 
+  	doublePostCheck int(11) unsigned DEFAULT '0' NOT NULL,
+
 2006-11-11 Franz Holzinger <franz@fholzinger.com>
 	* protection against spam words
 	* check of email address if it is available
