--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2006-12-29 Franz Holzinger <franz@fholzinger.com>
+	* name and email are preset from logged in FE user
+
 2006-11-25 Franz Holzinger <franz@fholzinger.com>
 	* fix 2555: unsigned 32 bit INTEGER for double post check field 
   	doublePostCheck int(11) unsigned DEFAULT '0' NOT NULL,
