fix bug with missing 'Forum: single' flexform with tree view
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@4451 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-01-01 Franz Holzinger <franz@fholzinger.com>
+	* fix bug with missing 'Forum: single' flexform with tree view
+
 2006-12-29 Franz Holzinger <franz@fholzinger.com>
 	* name and email are preset from logged in FE user
 
