--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-01-08 Franz Holzinger <franz@fholzinger.com>
+	* expand spam filter over all input fields
+
 2007-01-07 Franz Holzinger <franz@fholzinger.com>
 	* make fh_library a requirement until its code will go somewhere else
 	* Consider tstamp field instead of crdate for recent date. This makes it possible to reedit a record and consider only the date of the latest change.
