marker ###CR_IP### to store the ip address
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@4542 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-01-08 Franz Holzinger <franz@fholzinger.com>
 	* expand spam filter over all input fields
+	* marker ###CR_IP### to store the ip address
 
 2007-01-07 Franz Holzinger <franz@fholzinger.com>
 	* make fh_library a requirement until its code will go somewhere else
