--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-02-12 Franz Holzinger <franz@fholzinger.com>
+	* consider capital letters in spam words
+
 2007-01-08 Franz Holzinger <franz@fholzinger.com>
 	* expand spam filter over all input fields
 	* marker ###CR_IP### to store the ip address
