special treatment for PHP4
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@4874 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-02-12 Franz Holzinger <franz@fholzinger.com>
 	* consider capital letters in spam words
+	* special treatment for PHP4
 
 2007-01-08 Franz Holzinger <franz@fholzinger.com>
 	* expand spam filter over all input fields
