--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-02-14 Franz Holzinger <franz@fholzinger.com>
+	* do not sort tree forum by recent posts
+
 2007-02-12 Franz Holzinger <franz@fholzinger.com>
 	* consider capital letters in spam words
 	* special treatment for PHP4
