* fix bug with cached post form where the data of another feuser has been filled in * thanks to Jo Hasenau for his concept how to use USER_INT oder USER depending on the code
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@5067 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-27 Franz Holzinger <franz@fholzinger.com>
+	* fix bug with cached post form where the data of another feuser has been filled in
+	* thanks to Jo Hasenau for his concept how to use USER_INT oder USER depending on the code
+
 2007-02-14 Franz Holzinger <franz@fholzinger.com>
 	* do not sort tree forum by recent posts
 
