fix bug with cached post form where the data of another feuser has been filled in
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@5197 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-03-15 Franz Holzinger <franz@fholzinger.com>
+	* fix bug with cached post form where the data of another feuser has been filled in
+
 2007-03-01 Franz Holzinger <franz@fholzinger.com>
 	* To prevent from spammers you must set the memberOfGroups constant to the FE groups to which the FE users must belong to be able to post.
 
