--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-01 Franz Holzinger <franz@fholzinger.com>
+	* fix bug with wrong variables in submit.inc
+	* incorporate the translations for the ts_language... extensions into locallang.xml
+	* new markers for texts to be translated
+
 2007-04-24 Franz Holzinger <franz@fholzinger.com>
 	* more info for mails to mailinglist
 	* warning info text when no entry field is displayed because of not logged in user
