fix bug with wrong sent replies when mailing list is used
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@5965 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-07-16 Franz Holzinger <franz@fholzinger.com>
+	* fix bug with wrong sent replies when mailing list is used
+
 2007-07-01 Franz Holzinger <franz@fholzinger.com>
 	* fix bug with wrong variables in submit.inc
 	* incorporate the translations for the ts_language... extensions into locallang.xml
