allow captcha in create form
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@7144 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-05 Franz Holzinger <franz@fholzinger.com>
+	* allow captcha in create forms by default
+
 2007-10-17 Franz Holzinger <franz@fholzinger.com>
 	* make usage of sr_freecap in all post forms
 
