fix bug with SQL without fieldnames at search
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@7906 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-14 Franz Holzinger <franz@fholzinger.com>
+	* fix bug with SQL without fieldnames at search
+
 2007-11-05 Franz Holzinger <franz@fholzinger.com>
 	* allow captcha in create forms by default
 
