replace fh_library by div2007 add backend hook for TYPO3 4.2 to display the CODE of a flexform
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@9095 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-05 Franz Holzinger <franz@fholzinger.com>
+	* replace fh_library by div2007
+	* add backend hook for TYPO3 4.2 to display the CODE of a flexform
+
 2008-01-14 Franz Holzinger <franz@fholzinger.com>
 	* fix bug with SQL without fieldnames at search
 
