fix bug with not sent notification email
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@12113 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-18 Franz Holzinger <franz@fholzinger.com>
+	* add additional cache clearing function $GLOBALS['TSFE']->clearPageCacheContent_pidList($TSFE->id);
+	* fix bug with not sent notification emails
+
 2008-09-06 Franz Holzinger <franz@fholzinger.com>
 	* replace all English texts in example templates by global BOARD markers
 	* rename board_submit.inc into board_submit.php
