* change all links to use the plugins uid parameter instead of tt_board_uid
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@12335 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-09-25 Franz Holzinger <franz@fholzinger.com>
+	* change all links to use the plugins uid parameter instead of tt_board_uid
+
 2008-09-18 Franz Holzinger <franz@fholzinger.com>
 	* add additional cache clearing function $GLOBALS['TSFE']->clearPageCacheContent_pidList($TSFE->id);
 	* fix bug with not sent notification emails
