add API for other extensions to comment their records
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/tt_board/trunk@31880 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2010-04-03 Franz Holzinger <franz@fholzinger.com>
+	* add API for other extensions to comment their records
+
 2009-08-26 Franz Holzinger <franz@fholzinger.com>
 	* add CSS classes to the example templates
 	* fix bug with search of small texts with 2 letters
