--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-01-21 Franz Holzinger <franz@fholzinger.com>
+	* Modifications for PHP 5 and TYPO3 Coding Guidelines
+
 2011-01-19 Franz Holzinger <franz@fholzinger.com>
 	* Fix to the parameter with uid inside of brackets in the submit form. There has been a cache problem.
 	* fix bug with PHP 5.3: replace split by explode
