--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-08-03 Franz Holzinger <franz@fholzinger.com>
+	* ready for TYPO3 7.6.10
+
 2016-07-25 Franz Holzinger <franz@fholzinger.com>
 	* remove svn $Id$ and finishing php ?>
 
