--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-09-08 Franz Holzinger <franz@ttproducts.de>
+	* bugfix: PHP syntax error
+	* the $notify list contains the configured email addresses. Use GeneralUtility::rmFromList to remove the current user`s email address from this list if present.
+
 2016-08-31 Franz Holzinger <franz@ttproducts.de>
 	* bugfix: text and blob must have a default null value by TCA and not by SQL
 	* refactoring: replace the submit function checkEmail by the div2007 MailUtility::checkMXRecord
