* Do not keep any objects statically in the memory cache. The dynamic memory shall be automatically freed at the end of the processing.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017-03-02 Franz Holzinger <franz@ttproducts.de>
+    * Do not keep any objects statically in the memory cache. The dynamic memory shall be automatically freed at the end of the processing.
+
 2016-11-16 Franz Holzinger <franz@ttproducts.de>
 	* put the locallang php files into the xlf format
 
