--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-03-08 Franz Holzinger <franz@ttproducts.de>
+    * new feature: record browser
+    * restructuring
+
 2017-03-02 Franz Holzinger <franz@ttproducts.de>
     * Do not keep any objects statically in the memory cache. The dynamic memory shall be automatically freed at the end of the processing.
 
