--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017-03-10 Franz Holzinger <franz@ttproducts.de>
+    * bugfix comma
+
 2017-03-09 Franz Holzinger <franz@ttproducts.de>
     * bugfix in forum list: The link of recent post must be the page of the post.
     * new feature: The most recent posts are only considered for the number of recent days.
