--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2017-07-25 Franz Holzinger <franz@ttproducts.de>
+    * support for TYPO3 8.x
+    * bugfix: issue #1 use div2007 class FrontendUtility and method getContentObjectRenderer to fetch a contentObject
+    * bugfix: use image icon path typo3/sysext/t3skin/icons/gfx/ol instead of typo3/sysext/cms/tslib/media/scripts
+    * remove $GLOBALS['TT']
+    * bugfix: fix paths for the iconCode join images and change them into an IMAGE cObject
+
 2017-05-24 Franz Holzinger <franz@ttproducts.de>
     * add an installation tutorial
     * bugfix for the wizard
