--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 2017-08-21 Franz Holzinger <franz@ttproducts.de>
     * rename lib/board_submit.php => Classes/Controller/Submit.php
     * rename marker/class.tx_ttboard_marker.php => Classes/View/Marker.php
+    * change the setup of processScript into a function call to the Submit class
 
 2017-08-16 Franz Holzinger <franz@ttproducts.de>
     * rename model/class.tx_ttboard_model.php => Classes/Domain/TtBoard.php
