--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2017-08-29 Franz Holzinger <franz@ttproducts.de>
+    * move icons forum.gif and message_board.gif into Resources/Public/Icons/
 
 2017-08-26 Franz Holzinger <franz@ttproducts.de>
     * remove unused api/class.tx_ttboard_api.php
