--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-10-17 Franz Holzinger <franz@ttproducts.de>
+    * bugfix of the tree view and the indentation of the icons
+    * change the default colors 1 and 2
+
 2017-10-14 Franz Holzinger <franz@ttproducts.de>
     * make better usage of the TYPO3_DB methods
 
