--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017-11-24 Franz Holzinger <franz@ttproducts.de>
+    * add file README.txt with the hint that the constants PAGE_TARGET must be set to _top
+    * restructuring
+    * not not show the previous, next and go to the top when there is no other post
+
 2017-10-23 Franz Holzinger <franz@ttproducts.de>
     * move share/locallang.xlf -> Resources/Private/Language/locallang.xlf
 
