--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+
+2017-12-16 Franz Holzinger <franz@ttproducts.de>
+    * never use the call $TSFE->set_no_cache(). Convert all USER objects into a USER_INT if caching is not allowed
+
 2017-12-04 Franz Holzinger <franz@ttproducts.de>
     * restructure ActionController::forum_postform: extract FormuList as a new class with a render method
     * restructure ActionController::getContentRecord: extract Content as a new class with a getRecord method
