--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-02-20 Franz Holzinger <franz@ttproducts.de>
+    * use the new div2007 method \JambageCom\Div2007\Utility\ViewUtility::displayHelpPage
+
 2018-02-14 Franz Holzinger <franz@ttproducts.de>
     * exctract class ForumThread out of Forum
 
