--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-03-19 Franz Holzinger <franz@ttproducts.de>
+    * rename PostForm into Form
+
 2018-02-20 Franz Holzinger <franz@ttproducts.de>
     * use the new div2007 method \JambageCom\Div2007\Utility\ViewUtility::displayHelpPage
 
