--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2018-05-22 Franz Holzinger <franz@ttproducts.de>
+    * bugfix for the privacy checkbox: No checkbox shall be visible for logged in front end users.
 
 2018-04-30 Franz Holzinger <franz@ttproducts.de>
     * new feature: privacy policy checkbox for GDPR when there is no front end user
