--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2018-06-02 Franz Holzinger <franz@ttproducts.de>
     * move the Extension Manager methods addPiFlexFormValue and addPlugin from file ext_tables.php into Configuration/TCA/Overrides/tt_content.php
+    * add information about DSGVO and GDPR to the manual
+    * bugfix: the DSGVO checkbox must not be shown if memberOfGroups is > 0
+    * remove unused tt_board_tree setup
 
 2018-05-22 Franz Holzinger <franz@ttproducts.de>
     * bugfix for the privacy checkbox: No checkbox shall be visible for logged in front end users.
