--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -108,6 +108,15 @@
 			<trans-unit id="wrong_captcha" xml:space="preserve">
 				<source>Wrong captcha word '%s' entered!</source>
 			</trans-unit>
+			<trans-unit id="error_access_denied" xml:space="preserve">
+				<source>Access denied!</source>
+			</trans-unit>
+			<trans-unit id="error_email" xml:space="preserve">
+				<source>'%s' is not a valid email address!</source>
+			</trans-unit>
+			<trans-unit id="error_no_permission" xml:space="preserve">
+				<source>You do not have the permission to post into this forum!</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
