--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+
+2018-06-28 Franz Holzinger <franz@ttproducts.de>
+    * bugfix: because of the new base class \JambageCom\Div2007\Base\TranslationBase the new \JambageCom\Div2007\Utility\BrowserUtility must be used.
+
 2018-06-15 Franz Holzinger <franz@ttproducts.de>
     * bugfix: add localization for the error result of the submit form.
     * new base class: change the Localization class from \JambageCom\Div2007\Base\LocalisationBase to TranslationBase. Change the methods of the $languageObj object accordingly: loadLL => loadLocalLang, getLLkey => getLocalLangKey, getLL => getLabel
