* bugfix for TYPO3 9.x: replace deprecated method ContentObjectRenderer::fileResource by $TSFE->tmpl->getFileName and file_get_contents.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2018-07-30 Franz Holzinger <franz@ttproducts.de>
+    * bugfix for TYPO3 9.x: replace deprecated method ContentObjectRenderer::fileResource by $TSFE->tmpl->getFileName and file_get_contents. 
 
 2018-06-28 Franz Holzinger <franz@ttproducts.de>
     * bugfix: because of the new base class \JambageCom\Div2007\Base\TranslationBase the new \JambageCom\Div2007\Utility\BrowserUtility must be used.
