* move flexform_ds_pi_list.xml -> Configuration/FlexForms/flexform_ds_pi_list.xml * move flexform_ds_pi_tree.xml -> Configuration/FlexForms/flexform_ds_pi_tree.xml

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 
 
 2018-08-08 Franz Holzinger <franz@ttproducts.de>
+    * move flexform_ds_pi_list.xml -> Configuration/FlexForms/flexform_ds_pi_list.xml
+    * move flexform_ds_pi_tree.xml -> Configuration/FlexForms/flexform_ds_pi_tree.xml
     * move locallang.xlf -> Resources/Private/Language/locallang_be.xlf
 
 2018-06-08 Franz Holzinger <franz@ttproducts.de>
