* use \TYPO3\CMS\Core\Utility\PathUtility::stripPathSitePrefix(PATH_BE_TTBOARD) instead of call_user_func($emClass . "::siteRelPath", TT_BOARD_EXT) for the constant PATH_FE_TTBOARD_REL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 
 
 2018-08-10 Franz Holzinger <franz@ttproducts.de>
+    * use \TYPO3\CMS\Core\Utility\PathUtility::stripPathSitePrefix(PATH_BE_TTBOARD) instead of call_user_func($emClass . ::siteRelPath, TT_BOARD_EXT) for the constant PATH_FE_TTBOARD_REL
     * remove constant PATH_BE_TTBOARD_REL which is based on the TYPO3 9 deprecated method extRelPath.
     * modify the ctrl iconfile TCA of tt_board with the extension name instead of a relative path
 
