* add new documentation in alpha state

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-09-16 Franz Holzinger <franz@ttproducts.de>
+    * add new documentation in alpha state
+
 2018-08-27 Franz Holzinger <franz@ttproducts.de>
     * add German language XLF files
     * support for TYPO3 9.3.x
