--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-10-01 Franz Holzinger <franz@ttproducts.de>
+    * one time upload of language files. These language files will not be added on Github.
+
 2018-09-16 Franz Holzinger <franz@ttproducts.de>
     * add new documentation in alpha state
 
